--- a/client/index.html
+++ b/client/index.html
@@ -2,20 +2,22 @@
 
 <head>
     <title>Angular2 Test 1</title>
-    <script src="lib/es6-shim.min.js"></script>
-    <script src="lib/system.src.js"></script>
-    <script src="lib/angular2.dev.js"></script>
+    
+    <script src="/lib/system.src.js"></script>
+    <script src="/lib/Reflect.js"></script>
+    <script src="/lib/angular2.dev.js"></script>
+    <script src="/lib/Rx.js"></script>
 
     <script>
         System.config({
         packages: {        
-          app: {
-            format: 'register',
-            defaultExtension: 'js'
+          "app": {
+            format: "register",
+            defaultExtension: "js"
           }
         }
       });
-      System.import('main').then(null, console.error.bind(console));
+      System.import("app/main").then(null, console.error.bind(console));
     </script>
 
 </head>
