Using .catch rather than .then because we only pass an error function

--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
           }
         }
       });
-      System.import("app/main").then(null, console.error.bind(console));
+      System.import("app/main").catch(console.error.bind(console));
     </script>
 
 </head>
